# matrix-mul-cache

./: CMakeLists.txt  README.md  benchmark.sh  bigMatrixes.txt  build.sh  compile_commands.json
include/OAC/cache/: matrix.hpp
report/: defaultBenchmark.txt  lowerMatrixes.txt  valgrindO0.txt  valgrindO3.txt
report/O0/o/: 1000.txt  1200.txt  1400.txt  1600.txt  1800.txt  200.txt  2000.txt  400.txt  600.txt  800.txt
report/O0/t/: 1000.txt  1200.txt  1400.txt  1600.txt  1800.txt  200.txt  2000.txt  400.txt  600.txt  800.txt
report/O3/o/: 1000.txt  1200.txt  1400.txt  1600.txt  1800.txt  200.txt  2000.txt  400.txt  600.txt  800.txt
report/O3/t/: 1000.txt  1200.txt  1400.txt  1600.txt  1800.txt  200.txt  2000.txt  400.txt  600.txt  800.txt
source/: matrix.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: matrix.cpp
